--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <section class="section-3">
             <h1>You're the best!</h1>
         </section>
+        
+        <section class="section-4">
+            <h1>I added a new section</h1>
+        </section>
 </body>
 
 </html>
