--- a/index.html
+++ b/index.html
@@ -10,19 +10,19 @@
 
 <body>
         <section class="section-1">
-            <h1>Hello World!</h1>
+            <h1>Section 1</h1>
         </section>
 
         <section class="section-2">
-        <h1>You are awesome!</h1>
+        <h1>Section 2</h1>
         </section>
 
         <section class="section-3">
-            <h1>You're the best!</h1>
+            <h1>Section 3</h1>
         </section>
-        
+
         <section class="section-4">
-            <h1>I added a new section</h1>
+            <h1>Section 4</h1>
         </section>
 </body>
 
