--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
 </head>
 
 <body>
-        <section class="section-1">
-            <h1>Section 1</h1>
-        </section>
+    <section class="section-1">
+        <h1>Section 1</h1>
+        <p>Testing</p>
+    </section>
 
-        <section class="section-2">
+    <section class="section-2">
         <h1>Section 2</h1>
-        </section>
+    </section>
 
-        <section class="section-3">
-            <h1>Section 3</h1>
-        </section>
+    <section class="section-3">
+        <h1>Section 3</h1>
+    </section>
 
-        <section class="section-4">
-            <h1>Section 4</h1>
-        </section>
+    <section class="section-4">
+        <h1>Section 4</h1>
+    </section>
 </body>
 
 </html>
