--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
     <section class="section-4">
         <h1>Section 4</h1>
     </section>
+
+    <section class="section-5">
+        <h1>Section 5</h1>
+    </section>
 </body>
 
 </html>
