--- a/index.html
+++ b/index.html
@@ -29,8 +29,13 @@
     <section class="section-5">
         <h1>Section 5</h1>
     </section>
+
     <section class="section-6">
         <h1>Section 6</h1>
+    </section>
+
+    <section class="section-7">
+        <h1>Section 7</h1>
     </section>
 </body>
 
